# testing-paradox-HIV-STI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
figures/: TAPM.pptx
notebooks/: Figure_1_plots.ipynb  HIVandSTI_first_test.ipynb  Nobs_Nreal_derivatives.ipynb  Nobs_Nreal_derivatives.py  Nobs_Nreal_derivatives_bigmodel.ipynb  Nobs_Nreal_derivatives_bigmodel.py  Nobs_Nreal_derivatives_partialmitigationforPrepusers.py  Nobs_Nreal_positivityrate_plot.py  Nobs_Nreal_prevalence_and_difference_plots.py  NotebookForPrEP.ipynb  Nreal_Nobs_derivatives_crossproduct.ipynb  STI_model_sweep.ipynb  STI_model_sweep_P_H_lambda.ipynb  analytical_solution.ipynb  basic_model.ipynb  bigHIVmodel.ipynb  implicitanother.py  implicitnotsolved.py  lambdaP_vs_P.ipynb  min_PrEP_VS_lambda_P copy.ipynb  min_PrEP_VS_lambda_P.ipynb  miscellanea_for_fig_1.py  model_params.txt  model_params_HIVandSTI.txt  model_sweep.ipynb  model_sweep_P_H_lambda.ipynb  modified_STI_model_sweep.ipynb  modified_STI_model_sweep_all.ipynb  notebook_for_final_fig.ipynb  numerical_solution.ipynb  temp1.ipynb  temp2.ipynb  temp3.ipynb  temp4.ipynb  temp5.ipynb  test.ipynb
results/: Nreal_Nobs_values_and_derivatives_lambdap1_betaSTI0.0048.npy  Nreal_Nobs_values_and_derivatives_lambdap1_betaSTI0.008.npy  Nreal_Nobs_values_and_derivatives_lambdap1_betaSTI0.0112.npy  Nreal_Nobs_values_and_derivatives_lambdap2_betaSTI0.0048.npy  Nreal_Nobs_values_and_derivatives_lambdap2_betaSTI0.008.npy  Nreal_Nobs_values_and_derivatives_lambdap2_betaSTI0.0112.npy  (+3 more)
testing-artefacts-pharmaco-multipath/: _version.py
(+36 files in other folders)
