[build-system]
requires = [
    "setuptools>=67",
    "setuptools_scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "tapm"
authors = [
  { name = "Priesemann Group"}
]
description = "Testing artefacts in pharmaceutically-controlled multi-pathogen systems: a modelling study."
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dynamic = ["version", "dependencies"]
requires-python = '>=3.8'

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "numpy",
    "matplotlib",
    "ipywidgets",
    "scipy",
    "pandas",
    "path",
    "requests",
    "seaborn",
    "scikit-learn",
    "mplcursors",
    "jax",
    "diffrax",
    "icomo",
    "pytest"
]

[tool.pytest.ini_options]
testpaths = ["tests",]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"


[tool.setuptools_scm]
version_file= "src/tapm/_version.py"
